...
            "state": "translated",
            "value": "Камера недоступна"
          }
        }
      }
    },
    "Cancel": {
      "localizations": {
        "es": {
          "stringUnit": {
            "state": "translated",
            "value": "Cancelar"
          }
...
            "state": "translated",
            "value": "Отменено"
          }
        }
      }
    },
    "Can’t Open Link": {
      "localizations": {
        "es": {
          "stringUnit": {
            "state": "translated",
            "value": "No se puede abrir el enlace"
          }
...
            "state": "translated",
            "value": "Выбрать файлы…"
          }
        }
      }
    },
    "Close": {
      "localizations": {
        "es": {
          "stringUnit": {
            "state": "translated",
            "value": "Cerrar"
          }
...
            "state": "translated",
            "value": "Это не сервер Tilecast"
          }
        }
      }
    },
    "OK": {
      "localizations": {
        "es": {
          "stringUnit": {
            "state": "translated",
            "value": "Aceptar"
          }
...
            "state": "translated",
            "value": "Организация"
          }
        }
      }
    },
    "Photo Library": {
      "localizations": {
        "es": {
          "stringUnit": {
            "state": "translated",
            "value": "Fototeca"
          }
...
